styles.css
@font-face {
    font-family: 'RobotoLight';
    src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&family=Space+Mono&display=swap');
}

@font-face {
    font-family: 'Roboto';
    src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&family=Space+Mono&display=swap');
}

@font-face {
    font-family: 'Playfair Display';
    src: url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto:wght@100;300;400&family=Space+Mono&display=swap');
}

@font-face {
    font-family: 'HammersmithOne';
    src: url('https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Playfair+Display&family=Roboto:wght@100;300;400&family=Space+Mono&display=swap');
}

body {
    padding: 0;
    margin: 0;
    font-family: 'Roboto', sans-serif;
    font-size: 16px;
    display: flex;
    flex-direction: column;
}

header {
    background-image: url("./img/bgk-header.png");
    color: white;
    display: flex;
    flex-direction: column;
    background-size: cover;
    height: 83.5vh;
}

header nav {
    display: flex;
    flex-direction: row;
    padding: 0% 20% 0% 25%;
    justify-content: center;
    padding-top: 1%;
}

.firstPage .active {
    color: #00e0d0;
}

.header .logo {
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding-right: 20%;
    align-items: center;
}

#header-logo-image {
    height: 80%;
    width: auto;
}

#header-logo-text {
    width: auto;
    height: 50%;
    padding-left: 10%;
}

header .nav_list {
    width: 100%;
    list-style: none;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

header .nav_list li a {
    text-decoration: none;
    font-family: "Roboto Black", sans-serif;
    font-size: 0.8125rem;
    color: white;
    letter-spacing: 0.1rem;
}

.firstPage {
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
}

hr {
    width: 2.5%;
    border: 2px solid #00e0d0;
}

.firstPage h1 {
    font-family: "Playfair Display", sans-serif;
    padding-top: 10%;
    font-size: 2rem;
}

.firstPage p {
    font-family: 'RobotoLight', sans-serif;
    line-height: 1.5rem;
    letter-spacing: 0.12rem;
    opacity: 0.7;
    font-size: 0.875rem;
}

.button-place-holder-learn-more-hero-section {
    padding-top: 2%;
}

.button-place-holder-learn-more-hero-section button {
    font-family: 'HammersmithOne', sans-serif;
    background-color: transparent;
    border: 1.5px solid #00e0d0;
    border-radius: 5%;
    font-size: 1rem;
    color: #00e0d0;
    padding: 0.5% 1% 0.5% 1%;
    justify-content: center;
    text-align: center;
}

/* Section 2 */
.our-story {
    padding-top: 1.5%;
    display: flex;
    justify-content: center;
}

.button-placeholder {
    padding-top: 2%;
    width: 20%;
    height: auto;
}


.button-place-holder-learn-more-our-story button {
    font-family: 'Hammersmith One', sans-serif;
    background-color: transparent;
    border: 1.5px solid #00e0d0;
    border-radius: 5%;
    font-size: 1rem;
    color: #00e0d0;
    padding: 1% 2% 1% 2%;
    justify-content: center;
    text-align: center;
}

#logo-big-our-story {
    padding-top: 2%;
    width: 13%;
    height: 13%;
    justify-content: center;
    padding-right: 5%;
}

.our-story h1 {
    color: #413d4b;
    font-family: "Playfair Display", sans-serif;
    font-size: 1.375rem;
}

.our-story p {
    font-family: "Roboto Light", sans-serif;
    line-height: 1.5rem;
    display: flex;
    font-size: 0.875rem;
    justify-content: flex-start;
    color: #413d4b;
    opacity: 0.9;
}

.our-story {
    padding-bottom: 3.5%;
}

/* Section 3 */
.watchOurStory {
    background-image: url("./img/bgk-middle.png");
    background-repeat: no-repeat;
    background-size: cover;
    height: 70vh;
    justify-content: center;
    text-align: center;
    align-items: center;
    display: flex;
}

.watchOurStory img {
    width: 65%;
}

.watchOurStory span {
    font-family: "Roboto", sans-serif;
    font-weight: 600;
    letter-spacing: 3px;
    position: relative;
    display: flex;
    color: white;
    padding-top: 10%;
    font-size: 1rem;
}

button:hover {
    cursor: pointer;
    background-color: #00e0d0;
    color: #262626;
    transition: ease-in-out 0.3s;
}

#hamburger-menu {
    width: 10%;
    height: 100%;
}

@media only screen and (min-width: 1200px) and (max-width: 1500px){
    ul li a {
        font-size: 0.5rem;
        letter-spacing: 0;
    }
}

@media only screen and (min-width: 600px) and (max-width: 1200px){
    ul li a {
        font-size: 0.2rem;
        letter-spacing: 0;
    }
}

@media only screen and (max-width: 1200px) and (min-width: 800px){
    ul li a {
        font-size: 0.5rem;
        letter-spacing: 0;
    }
}

@media only screen and (max-width: 800px) and (min-width: 100px){
    ul li a {
        font-size: 0.2rem;
        letter-spacing: 0;
    }
}

